# easy-voice-call

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .travis.yml.bak  CMakeLists.txt  LICENSE  README.md  TODO.md  build-for-android-arm64-v8a.sh
client_android/: README.md  build.gradle  settings.gradle
client_android/app/: build.gradle
client_android/app/src/androidTest/java/com/zhang_ray/easyvoicecall/: ExampleInstrumentedTest.java
client_android/app/src/main/: AndroidManifest.xml  copyJniLibs.sh
client_android/app/src/main/cpp/: CMakeLists.txt  Entry.cpp  FileUtils.hpp  NetCommon.hpp  ReturnType.hpp  Worker.cpp  Worker.hpp
client_android/app/src/main/cpp/audio_engine/: AudioVolumeMeter_Peak.hpp  GeneratedWave.hpp  JitterBuffer.hpp
client_android/app/src/main/cpp/net_engine/: RawUdpClient.cpp  RawUdpClient.hpp
client_android/app/src/main/java/com/zhang_ray/easyvoicecall/: MainActivity.java  Worker.java
client_android/app/src/main/res/layout/: activity_main.xml
client_android/app/src/main/res/values/: strings.xml
client_android/app/src/test/java/com/zhang_ray/easyvoicecall/: ExampleUnitTest.java
client_android/gradle/wrapper/: gradle-wrapper.properties
client_cli/: CMakeLists.txt  Entry.cpp
client_essential/: AudioVolume.hpp  AudioVolumeMeter.hpp  CMakeLists.txt  CallbackStyleAudioEndpoint.cpp  CallbackStyleAudioEndpointStub.hpp  Factory.cpp  NetClient.hpp  NetClientStub_EchoMediaData.hpp  OpusEnc.hpp  Profiler.hpp  TcpClient.hpp  Worker.cpp  Worker.hpp  ZeroCrossingRate.hpp
client_essential/audio_engine/: AudioVolumeMeter_Peak.hpp  AudioVolumeMeter_RMS.hpp  DownstreamProcessor.cpp  DownstreamProcessor.hpp  Fade.hpp  JitterBuffer.hpp  PacketLossConcealment.hpp
client_essential/net_engine/: KcpClient.cpp  KcpClient.hpp
client_essential_android/: Alsa.hpp  AudioDecoder.hpp  AudioDevice.hpp  AudioEncoder.hpp  CMakeLists.txt  CallbackStyleAAudioEndpoint.hpp  CallbackStyleAudioEndpoint.hpp  CallbackStylePortaudioEndpoint.hpp  Codec.cpp  OpusDec.hpp  OpusEnc.hpp  TcpClient.hpp  Worker.hpp
client_essential_android/audio_engine/: AudioInStub.hpp  AudioVolumeMeter_Peak.hpp  DownstreamProcessor.cpp  Fade.hpp  PacketLossConcealment.hpp  PacketLossConcealment_ZeroInsertion.hpp
client_qt5/: CMakeLists.txt  Worker.cpp  Worker.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
client_qt5/resources/: Resource.qrc  Resource.rc
documents/technical/: AudioExperienceTestPlan.md  DebugSuggestions.md  MiscTestPlan.md  TediousNetworkProtocol.md  TediousNetworkTestPlan.md  TediousNetworkTestPlaning.md
include/: AudioCommon.hpp  IWorker.hpp  NetPacket.hpp  ZeroCrossingRate.hpp
include/evc/: Alsa.hpp  AudioCommon.hpp  AudioDecoder.hpp  AudioDevice.hpp  AudioEncoder.hpp  AudioVolume.hpp  CallbackStyleAudioEndpoint.hpp  CallbackStyleAudioEndpointStub.hpp  CallbackStylePortaudioEndpoint.hpp  Factory.hpp  FdkAacDecoder.hpp  FdkAacEncoder.hpp  FileUtils.hpp  Lib.hpp  Log.hpp  Logger.hpp  NetClient.hpp  NetClientStub_EchoMediaData.hpp  NetPacket.hpp  OpusDec.hpp  OpusEnc.hpp  PortAudio.hpp  ProcessTime.hpp  Profiler.hpp  ReturnType.hpp  RingBuffer.hpp  Singleton.hpp  TcpClient.hpp  Worker.hpp
misc/boost_chat/: build_boost_chats.sh  chat_client.cpp  chat_message.hpp  chat_server.cpp  client  server
scripts/: EasyVoiceCall.nsi  linux.client.build.sh  mac.build.sh  ubuntu.build.sh
scripts/appdmg/: Info.plist  spec.json
server/: BoostAsioTcpServer.cpp  CMakeLists.txt  KcpServer.cpp  KcpServer.hpp  Participant.hpp  RawUdpServer.cpp  RawUdpServer.hpp  Room.hpp  Server.cpp  Server.hpp  ServerLogger.hpp  TODO.md  TcpServer.hpp  UdpServer.hpp
src/: CMakeLists.txt  Entry.cpp  Factory.cpp
src_qt5/: CMakeLists.txt  mainwindow.ui
src_server/: BoostAsioTcpServer.cpp  CMakeLists.txt  TODO.md  TinyServer.cpp
tests/: CMakeLists.txt  TODO  TODO.md
tests/sanity_check/: CMakeLists.txt
tests/sanity_check/audio/: Entry.cpp
tests/sanity_check/net/kcp/: SanityCheckKcpEchoClient.cpp
tests/unit_tests/: AlsaLoopback.cpp  CMakeLists.txt  CallbackStylePortaudioEndpointLoopback.cpp  FdkAac.cpp  Opus.cpp  PortaudioLoopback.cpp  RingBuffer.cpp  Tcp.cpp
